<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="website_url">www.google.ca</string>
    <string name="app_name">Geosource</string>
    <string name="action_settings">Settings</string>
    <string name="add_picture">Take Picture</string>
    <string name="add_video">Record Video</string>
    <string name="add_audio">Record Audio</string>
    <string name="title_activity_incident">IncidentActivity</string>
    <string name="create_incident">Create New Incident</string>
    <string name="resume_incident_creation">Resume Creating Incident</string>
    <string name="submit_incident">Submit</string>
    <string name="cancel_incident">Cancel</string>
    <string name="incident_lost_media_saved">Unable to retrieve current incident. Any created media files were saved.</string>
    <string name="app_sharedpref_file_key">geosource shared pref</string>
    <string name="prompt_enter_text">Click to enter text.</string>
    <string name="failed_to_get_location">Location service unavailable. Unable to produce geotag.</string>
    <!-- socket communication strings for Toast. -->
    <string name="failed_to_format_content">Content formatting failed.</string>
    <string name="downloaded_incident_spec_for_channel">incident spec downloaded successfully for channel</string>
    <string name="failed_to_download_incident_spec_for_channel">Could not download incident spec for channel</string>
    <string name="uploaded_incident">New incident uploaded successfully.</string>
    <string name="failed_to_upload_incident">Incident upload failed. We will auto-retry later. </string>
    <string name="unknown_error">Unknown error.</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="incomprehensible_server_response">Incomprehensible server response.</string>
    <string name="failed_to_capture_image">Failed to capture image.</string>
    <string name="failed_to_capture_video">Failed to capture video.</string>
    <string name="content_view_weight">4</string>
    <string name="poster_label">incident author:</string>
    <string name="owner_label">channel owner:</string>
    <string name="channel_name_label">channel name:</string>
    <string name="star_means_required">(* = required)</string>
    <!-- &lt;!&ndash;Anam's stuff &ndash;&gt; -->
    <!-- <string name="menu_settings">Settings</string> -->
    <!-- <string name="title_activity_main">MainActivity</string> -->
    <!-- <string name="title_activity_camera_page">CameraPage</string> -->
    <!-- <string name="title_activity_audio">AudioActivity</string> -->
    <!-- <string name="title_activity_description">DescriptionActivity</string> -->

    <string name="title_activity_channel_selection">ChannelSelectionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="enter_filter_text">Enter filter text here.</string>

    <string name="downloaded_subscribed_channels">Downloaded subscribed channelIdentifiers.</string>
    <string name="failed_to_download_subscribed_channels">Could not download subscribed channelIdentifiers.</string>
    <string name="downloaded_channel_choices">Downloaded channel choices.</string>
    <string name="failed_to_download_channel_choices">Could not download channel choices.</string>
    <string name="select_a_channel">Please select a channel for which to create a new incident.</string>

</resources>
