<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/incident_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:text="@string/create_incident"/>

            <TextView
                android:id="@+id/poster_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:text="@string/poster_label"/>

            <TextView
                android:id="@+id/channel_name_view"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:text="@string/channel_name_label"/>

            <TextView
                android:id="@+id/channel_owner_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/abc_text_size_subhead_material"
                android:text="@string/owner_label"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:onClick="onSubmitButtonClicked"
        android:text="@string/submit_incident" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:onClick="onCancelButtonClicked"
        android:text="@string/cancel_incident" />

</LinearLayout>

